# single-threaded-networking

./: CMakeLists.txt  LICENSE  README.md
include/: Client.h  Server.h
lib/networking/: CMakeLists.txt  Client.cpp  Server.cpp  TransferMessage.h
tools/chatclient/: CMakeLists.txt  ChatWindow.cpp  ChatWindow.h
tools/chatserver/: CMakeLists.txt  chatserver.cpp
